--- a/main.html
+++ b/main.html
@@ -615,7 +615,6 @@
         </div>
       </div>
     </section>
-
     <!-- Documents Section -->
     <section id="documentos" class="py-16 bg-gray-50">
       <div class="container mx-auto px-4">
@@ -671,6 +670,12 @@
             >
               Prestação de Contas
             </button>
+            <button
+              class="tab-button py-4 px-6 font-medium text-gray-600 hover:text-blue-900 flex-1 text-center"
+              data-tab="imagens-institucionais"
+            >
+              Imagens Institucionais
+            </button>
           </div>
 
           <!-- Tab Content: Documentos da rede -->
@@ -691,14 +696,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
                     Instruções Normativas
                   </h4>
-                  <p class="text-sm text-gray-600">PDF - 245KB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
 
@@ -717,14 +722,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
                     Legislações, Leis e Pareceres
                   </h4>
-                  <p class="text-sm text-gray-600">PDF - 198KB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
 
@@ -743,14 +748,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
                     Resoluções, Decretos e Portarias
                   </h4>
-                  <p class="text-sm text-gray-600">PDF - 156KB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
 
@@ -769,14 +774,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
                     Portarias de Unidades Escolares
                   </h4>
-                  <p class="text-sm text-gray-600">PDF - 1.2MB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
               <a
@@ -794,14 +799,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
                     Currículos por Modalidades
                   </h4>
-                  <p class="text-sm text-gray-600">PDF - 1.2MB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
               <a
@@ -819,14 +824,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
                     Currículos em Ação - Desenvolvendo Habilidades
                   </h4>
-                  <p class="text-sm text-gray-600">PDF - 1.2MB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
               <a
@@ -844,12 +849,12 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">Documentos da Rede</h4>
-                  <p class="text-sm text-gray-600">PDF - 1.2MB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
             </div>
@@ -873,92 +878,15 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
-                    Plano de Aula - Modelo
+                    MATERIAIS DE APOIO - POLÍTICA MUNICIPAL DE EDUCAÇÃO EM TEMPO
+                    INTEGRAL
                   </h4>
-                  <p class="text-sm text-gray-600">DOCX - 78KB</p>
-                </div>
-              </a>
-
-              <a
-                href="#"
-                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-blue-500 mr-3"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
-                </svg>
-                <div>
-                  <h4 class="font-medium text-blue-900">
-                    Formulário de Licença
-                  </h4>
-                  <p class="text-sm text-gray-600">PDF - 215KB</p>
-                </div>
-              </a>
-
-              <a
-                href="#"
-                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-blue-500 mr-3"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
-                </svg>
-                <div>
-                  <h4 class="font-medium text-blue-900">
-                    Diretrizes Pedagógicas
-                  </h4>
-                  <p class="text-sm text-gray-600">PDF - 3.5MB</p>
-                </div>
-              </a>
-
-              <a
-                href="#"
-                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-blue-500 mr-3"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
-                </svg>
-                <div>
-                  <h4 class="font-medium text-blue-900">
-                    Relatório de Avaliação
-                  </h4>
-                  <p class="text-sm text-gray-600">DOCX - 125KB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
             </div>
@@ -986,8 +914,10 @@
                   />
                 </svg>
                 <div>
-                  <h4 class="font-medium text-blue-900">Manual do SIGEduc</h4>
-                  <p class="text-sm text-gray-600">PDF - 2.8MB</p>
+                  <h4 class="font-medium text-blue-900">
+                    Módulo Unidades Escolares
+                  </h4>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
 
@@ -1006,14 +936,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
-                    Tutorial de Cadastro
+                    Módulo Gestor Escolar
                   </h4>
-                  <p class="text-sm text-gray-600">PDF - 1.5MB</p>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
 
@@ -1032,12 +962,12 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
-                  <h4 class="font-medium text-blue-900">FAQ SIGEduc</h4>
-                  <p class="text-sm text-gray-600">PDF - 875KB</p>
+                  <h4 class="font-medium text-blue-900">Módulo Professores</h4>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
 
@@ -1056,12 +986,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                    d="M3 7a2 2 0 012-2h4l2 2h8a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"
                   />
                 </svg>
                 <div>
-                  <h4 class="font-medium text-blue-900">Vídeos Tutoriais</h4>
-                  <p class="text-sm text-gray-600">Links</p>
+                  <h4 class="font-medium text-blue-900">
+                    Módulo Secretaria de Educação
+                  </h4>
+                  <p class="text-sm text-gray-600">Drive</p>
                 </div>
               </a>
             </div>
@@ -1077,16 +1009,10 @@
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="h-8 w-8 text-blue-500 mr-3"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
+                  <path d="M6 4l10 6-10 6V4z" />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
@@ -1103,16 +1029,10 @@
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="h-8 w-8 text-blue-500 mr-3"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
+                  <path d="M6 4l10 6-10 6V4z" />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">Circular</h4>
@@ -1127,16 +1047,10 @@
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="h-8 w-8 text-blue-500 mr-3"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
+                  <path d="M6 4l10 6-10 6V4z" />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">Memorando</h4>
@@ -1177,16 +1091,10 @@
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="h-8 w-8 text-blue-500 mr-3"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
+                  <path d="M6 4l10 6-10 6V4z" />
                 </svg>
                 <div>
                   <h4 class="font-medium text-blue-900">
@@ -1402,6 +1310,35 @@
                 <div>
                   <h4 class="font-medium text-blue-900">Lei 2102</h4>
                   <p class="text-sm text-gray-600">PDF - 90,3 KB</p>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- Tab Content: Imagens Institucionais -->
+          <div id="imagens-institucionais" class="tab-content p-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+              <a
+                href="https://drive.google.com/file/d/1cS8GhpYMc1P63VLbxFozo0NapWujogQT/view?usp=sharing"
+                class="flex items-center p-4 border rounded-lg hover:bg-blue-50 transition duration-200"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-blue-500 mr-3"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
+                  />
+                </svg>
+                <div>
+                  <h4 class="font-medium text-blue-900">Imagens</h4>
+                  <p class="text-sm text-gray-600">PDF - 13,4 MB</p>
                 </div>
               </a>
             </div>
