--- a/main.html
+++ b/main.html
@@ -1107,7 +1107,7 @@
           </div>
 
           <!-- Tab Content: Calendário Escolar -->
-          <div id="calendario" class="tab-content p-6">
+          <div class="tab-content p-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
               <a
                 href="https://drive.google.com/file/d/18iv28tFa-vGopjQq6FB-5nUZTCDAFQgt/view?usp=sharing"
