--- a/main.html
+++ b/main.html
@@ -219,7 +219,7 @@
             />
           </svg>
           <p class="text-blue-800 text-sm font-medium">
-            Resultado Final de Solicitações!
+            Jogos Escolares
             <a
               href="https://petrolina-pe.portalsigeduc.com.br/app/public/gerenciar_solicitacao_pre_matricula/form.jsf"
               class="underline"
@@ -1870,7 +1870,9 @@
                 src="./logo.png"
                 alt="logo municipal"
               />
-              <h3 class="text-xl font-bold">Secretaria de Educação</h3>
+              <h3 class="text-xl font-bold">
+                Secretaria de Educação, Cultura e Esporte
+              </h3>
             </div>
             <p class="text-blue-300 text-sm">
               Promovendo educação de qualidade para o desenvolvimento do nosso
@@ -1965,10 +1967,12 @@
           class="border-t border-blue-900 mt-8 pt-6 text-sm text-blue-300 text-center"
         >
           <p>
-            &copy; 2025 Secretaria de Educação. Todos os direitos reservados.
+            &copy; 2025 Secretaria de Educação, Cultura e Esporte de Petrolina.
+            Todos os direitos reservados.
           </p>
           <p class="mt-2">
-            Desenvolvido pela Equipe de TI da Secretaria de Educação
+            Desenvolvido pela Diretoria de Tecnologia da Informação e
+            Comunicação.
           </p>
         </div>
       </div>
